packages/transpiler/test/fixtures/errors/index-signature-on-class/input.ts
/**
 * @public
 */
export class WithIndexSig {
    [key: string]: number;
}
